# nxm

./: .gitmodules  CMakeLists.txt  README.md  cpr-config.cmake
include/: command-structure.h  command.h  web-scraper.h
src/: command.cpp  main.cpp  nxm.cpp  web-scraper.cpp
